syntax = "proto3";
option go_package = "./protos/versions";
message supportedLanguages{
repeated Language languages=1;
}

message Language{
    string name=1;
    string path=2;
}